--- a/templates/index.html
+++ b/templates/index.html
@@ -56,113 +56,103 @@
           </div>
         </div>   
       </a>    
+
+      <a href="#">
+        <h1 class="grid-itemH">Today's Transactions</h1>
+        <div class="grid-item1">
+          <div id="cardcontainer1">
+            <div class="cardcontainer2issued">
+              <h1>Issued</h1>
+              <p>825</p>
+            </div>
+            <i id="issued" class="fa fa-thin fa-hand-holding"></i>
+          </div>
+        </div>
+      </a> 
+      <a href="#">
+        <div class="grid-item">
+          <div id="cardcontainer1">
+            <div class="cardcontainer2returned">
+              <h1>Returned</h1>
+              <p>825</p>
+            </div>
+            <i id="returned" class="fa fa-duotone fa-thumbs-up"></i>
+          </div>
+        </div>
+      </a> 
+      <a href="#">
+        <div class="grid-item">
+          <div id="cardcontainer1">
+            <div class="cardcontainer2pending">
+              <h1>Reserved</h1>
+              <p>825</p>
+            </div>
+            <i id="date" class="fa fa-duotone fa-briefcase"></i>
+          </div>
+        </div>
+      </a> 
+      <a href="#">
+        <div class="grid-item">
+          <div id="cardcontainer1">
+            <div class="cardcontainer2date">
+              <h1>Violations</h1>
+              <p>825</p>
+            </div>
+            <i id="pending" class="fa fa-duotone fa-thumbs-down"></i>
+          </div>
+        </div>
+      </a>
+
+      
+      <a href="#">
+        <h1 class="grid-itemH">All Transactions</h1>
+        <div class="grid-item1">
+          <div id="cardcontainer1">
+            <div class="cardcontainer2issued">
+              <h1>Issued</h1>
+              <p>825</p>
+            </div>
+            <i id="issued" class="fa fa-thin fa-hand-holding"></i>
+          </div>
+        </div>
+      </a> 
+      <a href="#">
+        <div class="grid-item">
+          <div id="cardcontainer1">
+            <div class="cardcontainer2returned">
+              <h1>Returned</h1>
+              <p>825</p>
+            </div>
+            <i id="returned" class="fa fa-duotone fa-thumbs-up"></i>
+          </div>
+        </div>
+      </a> 
+      <a href="#">
+        <div class="grid-item">
+          <div id="cardcontainer1">
+            <div class="cardcontainer2pending">
+              <h1>Reserved</h1>
+              <p>825</p>
+            </div>
+            <i id="date" class="fa fa-duotone fa-briefcase"></i>
+          </div>
+        </div>
+      </a> 
+      <a href="#">
+        <div class="grid-item">
+          <div id="cardcontainer1">
+            <div class="cardcontainer2date">
+              <h1>Violations</h1>
+              <p>825</p>
+            </div>
+            <i id="pending" class="fa fa-duotone fa-thumbs-down"></i>
+          </div>
+        </div>
+      </a>
       
     </div>
 
-    <hr>
-    <h1>Today's Transactions</h1>
-    <br>
     
-
-    <div class="grid-container">    
-      <a href="#">
-        <div class="grid-item1">
-          <div id="cardcontainer1">
-            <div class="cardcontainer2issued">
-              <h1>Issued</h1>
-              <p>825</p>
-            </div>
-            <i id="issued" class="fa fa-thin fa-hand-holding"></i>
-          </div>
-        </div>
-      </a> 
-      <a href="#">
-        <div class="grid-item">
-          <div id="cardcontainer1">
-            <div class="cardcontainer2returned">
-              <h1>Returned</h1>
-              <p>825</p>
-            </div>
-            <i id="returned" class="fa fa-duotone fa-thumbs-up"></i>
-          </div>
-        </div>
-      </a> 
-      <a href="#">
-        <div class="grid-item">
-          <div id="cardcontainer1">
-            <div class="cardcontainer2pending">
-              <h1>Reserved</h1>
-              <p>825</p>
-            </div>
-            <i id="date" class="fa fa-duotone fa-briefcase"></i>
-          </div>
-        </div>
-      </a> 
-      <a href="#">
-        <div class="grid-item">
-          <div id="cardcontainer1">
-            <div class="cardcontainer2date">
-              <h1>Violations</h1>
-              <p>825</p>
-            </div>
-            <i id="pending" class="fa fa-duotone fa-thumbs-down"></i>
-          </div>
-        </div>
-      </a>   
-    </div>
-
-    <hr>
-    <h1>All Transactions</h1>
-    <br>
-    
-
-    <div class="grid-container">    
-      <a href="#">
-        <div class="grid-item1">
-          <div id="cardcontainer1">
-            <div class="cardcontainer2issued">
-              <h1>Issued</h1>
-              <p>825</p>
-            </div>
-            <i id="issued" class="fa fa-thin fa-hand-holding"></i>
-          </div>
-        </div>
-      </a> 
-      <a href="#">
-        <div class="grid-item">
-          <div id="cardcontainer1">
-            <div class="cardcontainer2returned">
-              <h1>Returned</h1>
-              <p>825</p>
-            </div>
-            <i id="returned" class="fa fa-duotone fa-thumbs-up"></i>
-          </div>
-        </div>
-      </a> 
-      <a href="#">
-        <div class="grid-item">
-          <div id="cardcontainer1">
-            <div class="cardcontainer2pending">
-              <h1>Reserved</h1>
-              <p>825</p>
-            </div>
-            <i id="date" class="fa fa-duotone fa-briefcase"></i>
-          </div>
-        </div>
-      </a> 
-      <a href="#">
-        <div class="grid-item">
-          <div id="cardcontainer1">
-            <div class="cardcontainer2date">
-              <h1>Violations</h1>
-              <p>825</p>
-            </div>
-            <i id="pending" class="fa fa-duotone fa-thumbs-down"></i>
-          </div>
-        </div>
-      </a>   
-    </div>
-
        
 {%endblock%}
 </body>
