--- a/templates/mdetails.html
+++ b/templates/mdetails.html
@@ -1,20 +1,23 @@
 {% extends "base.html"%}
 {% include "partials/links.html"%}
 {% block content%}
+
 <div>
   <div>
     <h1>member details</h1>
     <h2>Name: {{m_details.name}}</h2>
     <h2>RegNo: {{m_details.regNo}}</h2>
     <h2>contact: {{m_details.contact}}</h2>
+
+    
     <a href="{% url 'update-member' m_details.pk%}"><button class="btn btn-outline-secondary">Update</button></a></td>
-    <a href="{% url 'delete-member' m_details.pk%}"><button class="btn btn-outline-danger">Delete</button></a></td>
-</div>
-<br>
-<div>
-  <a href="#"><button class="btn btn-danger">Issue A Book</button></a>
-  <a href="#"><button class="btn btn-danger">Claim Book</button></a>
-</div>
+    <a href="{% url 'popup' m_details.pk %}"><button class="btn btn-outline-danger">Delete</button></a></td> 
+  </div>
+  <br>
+  <div>
+    <a href="#"><button class="btn btn-danger">Issue A Book</button></a>
+    <a href="#"><button class="btn btn-danger">Claim Book</button></a>
+  </div>
 </div>
 <br>
 <h2>Books:</h2>
