--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,20 +1,22 @@
 {% include "partials/links.html"%}
-<!--nav-->
-<nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container">
-    <a class="navbar-brand" href="#"><i class="fa fa-thin fa-bars"></i></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <h1>Hello {{request.user | capfirst}}, welcome </h1>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!--  -->
-      </ul>
-    
+{% if request.user.is_authenticated %}
+  <!--nav-->
+  <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container">
+      <a class="navbar-brand" href="#"><i class="fa fa-thin fa-bars"></i></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <h1>Hello {{request.user | capfirst}}, welcome </h1>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <!--  -->
+        </ul>
+      
 
+      </div>
+        <button onclick="myFunction()">Toggle dark mode</button>
     </div>
-      <button onclick="myFunction()">Toggle dark mode</button>
-  </div>
-</nav>
-<!--endnav-->
+  </nav>
+  <!--endnav-->
+{%endif%}
