--- a/templates/bookdetails.html
+++ b/templates/bookdetails.html
@@ -1,24 +1,27 @@
 {% extends "base.html"%}
 {% include "partials/links.html"%}
 {% block content%}
-<div>
-    <button class="btn btn-warning">Lease</button>
-    <button class="btn btn-danger">Claim</button>
-</div>
-<div>
-  <a href="{% url 'book' %}" class="btn btn-warning">Add New Book</a>
-  <a href="{% url 'book-csv' %}" class="btn btn-outline-secondary">CSV</a>
-</div>
-<br>
+{% if request.user.is_authenticated %}
+  <div>
+      <button class="btn btn-warning">Lease</button>
+      <button class="btn btn-danger">Claim</button>
+  </div>
+  <div>
+    <a href="{% url 'book' %}" class="btn btn-warning">Add New Book</a>
+    <a href="{% url 'book-csv' %}" class="btn btn-outline-secondary">CSV</a>
+  </div>
+  <br>
 
-   
-   <h2>Title: {{bk.title}}</h2>
-   <h2>Category: {{bk.category}}</h2> 
-   <h2>Description: {{bk.description}}</h2>
-   <h2>Serial_Number: {{bk.s_number}}</h2>
-   
-      
-<br>
+    
+    <h2>Title: {{bk.title}}</h2>
+    <h2>Category: {{bk.category}}</h2> 
+    <h2>Description: {{bk.description}}</h2>
+    <h2>Serial_Number: {{bk.s_number}}</h2>
+    
+        
+  <br>
+  <a href="{% url 'update-bk' bk.pk%}"><button class="btn btn-outline-secondary">Update</button></a></td>
+  <a href="{% url 'delete-bk' bk.pk %}"><button class="btn btn-outline-danger">Delete</button></a></td> 
 
-
+{%endif%}
 {% endblock %}
